[project]
name = "relaycache-tests"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.27",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "uvicorn>=0.48.0",
]

[dependency-groups]
lint = [
    "mypy>=1.10",
    "ruff>=0.5",
]
docs = [
    "furo",
    "sphinx>=7.4",
    "myst-parser>=3.0",
]
dev = [
    {include-group = "lint"},
    {include-group = "docs"},
]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = [
    "ANN101",  # missing type for self
    "ANN102",  # missing type for cls
    "ANN401",  # Any is legitimate for *args/**kwargs forwarding
]

[tool.mypy]
python_version = "3.10"
strict = true
